Trying to fix overflow problem by setting it to hidden

--- a/style.css
+++ b/style.css
@@ -128,6 +128,7 @@ margin: 2rem;
 
     body{
         flex-wrap: wrap;
+        overflow-x: hidden;
     }
     #text-container {
       display: flex;
@@ -149,6 +150,7 @@ margin: 2rem;
         align-items: center;
     }
 }
+
 #home-text{
     max-width: 28rem;
     font-size: 1.1em; 
